description: """
desct
"""

opam-version: "2.0"
version: "dev"
synopsis: "desc"
maintainer: "contact@marigold.dev"
authors: [ "Marigold <contact@marigold.dev>" ]

license: "MIT"
tags: [ "tezos" "optimistic" "rollup" ]
homepage: "https://github.com/marigold-dev/chusai"
dev-repo: "git+https://github.com/marigold-dev/chusai.git"
bug-reports: "https://github.com/marigold-dev/chusai/issues"

build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name ] {with-test}
  [ "dune" "build" "@doc" "-p" name ] {with-doc}
]

depends: [
  "ocaml" { >= "4.11.1" }
  "dune" { >= "2.9" }
  "lwt" { >= "5.3.0" }
  "data-encoding" { >= "0.4" }
  "tezos-base" { >= "12.3" }
  "tezos-stdlib" { >= "12.3" }
  "tezos-stdlib-unix" { >= "12.3" }
  "tezos-micheline" { >= "12.3" }
  "odoc" {with-doc}
  "alcotest" {with-test}
  "tezt" {pinned & with-test}

]

pin-depends: [
  ["tezt.1.0.0" "git+https://gitlab.com/tezos/tezos.git"]
]