description: """
desct
"""

opam-version: "2.0"
version: "dev"
synopsis: "desc"
maintainer: "contact@marigold.dev"
authors: [ "Marigold <contact@marigold.dev>" ]

license: "MIT"
tags: [ "tezos" "optimistic" "rollup" ]
homepage: "https://github.com/marigold-dev/chusai"
dev-repo: "git+https://github.com/marigold-dev/chusai.git"
bug-reports: "https://github.com/marigold-dev/chusai/issues"

build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name ] {with-test}
  [ "dune" "build" "@doc" "-p" name ] {with-doc}
]

depends: [
  "ocaml" { < "4.13.0" }
  "dune" { >= "2.9" }
  "cmdliner" { >= "1.0.0"}
  "lwt" { >= "5.3.0" }
  "data-encoding" { >= "0.4" }
  "tezos-base" { >= "12.3" }
  "tezos-stdlib" { >= "12.3" }
  "tezos-stdlib-unix" { >= "12.3" }
  "tezos-event-logging"{ >= "12.3" }
  "tezos-client-base" { >= "12.3" }
  "tezos-client-base-unix" { >= "12.3" }
  "tezos-shell-services" { >= "12.3" }
  "tezos-rpc" { >= "12.3" }
  "tezos-rpc-http" { >= "12.3" }
  "tezos-rpc-http-client" { >= "12.3" }
  "tezos-rpc-http-client-unix" { >= "12.3" }
  "tezos-rpc-http-server" { >= "12.3" }
  "tezos-crypto" { >= "12.3" }
  "tezos-protocol-013-PtJakart" { >= "12.3" }
  "tezos-client-013-PtJakart" { >= "12.3" }
  "preface" { >= "1.0.0" }
  "odoc" {with-doc}
  "alcotest" {with-test}
  "tezt" {pinned & with-test}
  "tezos-protocol-013-PtJakart-parameters" { >= "12.3" }
  "PtJakart-parameters" { pinned }
  "tezos-013-PtJakart-test-helpers" { pinned }
]

pin-depends: [
  ["tezt.2.0.0" "git+https://gitlab.com/tezos/tezos.git"]
  ["PtJakart-parameters.dev" "git+https://gitlab.com/ligolang/tezos-ligo.git#86e9e5593679910f52a06cd2b7483f2ea3f5bd4c" ]
  ["tezos-013-PtJakart-test-helpers.dev" "git+https://gitlab.com/ligolang/tezos-ligo.git#86e9e5593679910f52a06cd2b7483f2ea3f5bd4c" ]
]
