description: """
desct
"""

opam-version: "2.0"
version: "dev"
synopsis: "desc"
maintainer: "contact@marigold.dev"
authors: [ "Marigold <contact@marigold.dev>" ]

license: "MIT"
tags: [ "tezos" "optimistic" "rollup" ]
homepage: "https://github.com/marigold-dev/chusai"
dev-repo: "git+https://github.com/marigold-dev/chusai.git"
bug-reports: "https://github.com/marigold-dev/chusai/issues"

build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs "--promote-install-files=false" 
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
  [ "dune" "runtest" "-p" name ] {with-test}
  [ "dune" "build" "@doc" "-p" name ] {with-doc}
]

depends: [
  "odoc" {with-doc}
  "alcotest" {with-test}
  "qcheck-alcotest" {with-test}
  "tezt" {pinned & with-test}
  "batteries" {>= "3.5.1"} 
  "bin_prot" {>= "0.15.0"}
  "containers" {>= "3.9"}
  "dune" { >= "2.9" }
  "data-encoding" { >= "0.4" }
  "lwt" { >= "5.3.0" }
  "hacl-star" {>= "0.4.5"}
  "ppx_deriving" {>= "5.2.1"}
  "tezos-base" { >= "12.3" }
  "tezos-base58" {>= "1.0.0"}
  "tezos-micheline" { >= "12.3" }
  "tezos-stdlib" { >= "12.3" }
  "tezos-stdlib-unix" { >= "12.3" }
  "ocaml" { < "4.13.0" }
]

pin-depends: [
  ["tezt.1.0.0" "git+https://gitlab.com/tezos/tezos.git"]
]
